# cricket-streaming-data

./: README.md  pyproject.toml
cdk/: app.py
cdk/infrastructure/: data_transformation_lambda.py  streaming_data_infrastructure.py
notebooks/: testing.ipynb
stream/: 1358412.csv  stream_data.py
